feat: 插件迁移与构建
Co-authored-by: traeagent <traeagent@users.noreply.github.com>